Fix top buttons misalignment when sidebar is expanded

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -177,6 +177,9 @@
     --zen-toolbox-min-width: fit-content;
     padding: var(--zen-toolbox-padding);
     padding-top: 0;
+    @media ((-moz-bool-pref: 'zen.view.compact') and (-moz-bool-pref: 'zen.view.compact.hide-toolbar')) {
+      padding-top: var(--zen-toolbox-padding);
+    }
 
     & #titlebar {
       min-width: 150px;
